[package]
name = "intersolar"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "intersolar"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }
spl-token-metadata = "0.0.1"
intersolar-type-mapper = { path = "../intersolar-type-mapper" }
